Update select menu

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -8,6 +8,9 @@
   "EXT_DESCRIPTION": {
     "message": "Automatically formats JSON making it easier to read."
   },
+  "THEME": {
+    "message": "Theme"
+  },
   "TAB_FORMATTED": {
     "message": "Formatted"
   },
